# pychurchtools

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  ct.py  ct_types.py  events.py  general.py  person.py  persons.py  pyproject.toml  service.py  services.py  setup.py  songs.py  status.py  wiki.py
.github/workflows/: publish.yml  tests.yml
churchtools/: __init__.py  admin.py  calendars.py  ct_types.py  departments.py  events.py  general.py  group_homepages.py  groups.py  persons.py  resource.py  services.py  songs.py  status.py  wiki.py
churchtools/models/: __init__.py  admin.py  calendar.py  department.py  event.py  general.py  group.py  group_homepage.py  pagination.py  person.py  resource.py  service.py  settings.py  song.py  status.py  wiki.py
tests/: __init__.py  test_admin.py  test_calendar.py  test_departments.py  test_events.py  test_general.py  test_group_homepages.py  test_groups.py  test_persons.py  test_resource.py  test_services.py  test_songs.py  test_status.py  test_wiki.py
