[tool.poetry]
name = "churchtools"
version = "0.4.1"
description = "A library for the ChurchTools API"
authors = ["Philipp Glaum <p@pglaum.de>"]
license = "GPLv3"
readme = "README.md"
keywords = ["api", "churchtools"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
pytest = "^8.2.2"
types-requests = "^2.32.0.20240622"
ipython = "^8.25.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
